--- a/LocationAlbum/LocationAlbum/Base.lproj/Main.storyboard
+++ b/LocationAlbum/LocationAlbum/Base.lproj/Main.storyboard
@@ -57,8 +57,8 @@
                                 <color key="textColor" cocoaTouchSystemColor="darkTextColor"/>
                                 <nil key="highlightedColor"/>
                             </label>
-                            <label opaque="NO" clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleToFill" ambiguous="YES" text="ADDRESS" lineBreakMode="tailTruncation" minimumFontSize="10" translatesAutoresizingMaskIntoConstraints="NO" id="Qan-cZ-I2R">
-                                <rect key="frame" x="16" y="184" width="80" height="22"/>
+                            <label opaque="NO" clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleToFill" text="ADDRESS" lineBreakMode="tailTruncation" minimumFontSize="10" translatesAutoresizingMaskIntoConstraints="NO" id="Qan-cZ-I2R">
+                                <rect key="frame" x="16" y="184" width="73" height="22"/>
                                 <color key="backgroundColor" red="1" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                                 <fontDescription key="fontDescription" name="AvenirNext-Regular" family="Avenir Next" pointSize="16"/>
                                 <color key="textColor" cocoaTouchSystemColor="darkTextColor"/>
@@ -84,6 +84,7 @@
                             <constraint firstItem="a3x-8j-uAR" firstAttribute="top" secondItem="MRq-XZ-dAX" secondAttribute="bottom" constant="12" id="bkv-gP-ZAT"/>
                             <constraint firstItem="MRq-XZ-dAX" firstAttribute="top" secondItem="KQZ-1w-vlD" secondAttribute="bottom" constant="24" id="jYS-U4-Jpe"/>
                             <constraint firstItem="Qan-cZ-I2R" firstAttribute="top" secondItem="a3x-8j-uAR" secondAttribute="bottom" constant="36" id="kTQ-KA-suW"/>
+                            <constraint firstItem="Qan-cZ-I2R" firstAttribute="leading" secondItem="a3x-8j-uAR" secondAttribute="leading" id="pds-WW-haR"/>
                             <constraint firstItem="5Zo-S6-ipl" firstAttribute="centerX" secondItem="tsR-hK-woN" secondAttribute="centerX" id="tHb-6B-LOb"/>
                             <constraint firstItem="a3x-8j-uAR" firstAttribute="leading" secondItem="MRq-XZ-dAX" secondAttribute="leading" id="wGC-vC-zQE"/>
                             <constraint firstItem="PQr-Ze-W5v" firstAttribute="bottom" secondItem="5Zo-S6-ipl" secondAttribute="bottom" constant="36" id="wI0-s0-oep"/>
