Editing the location

--- a/LocationAlbum/LocationAlbum/Base.lproj/Main.storyboard
+++ b/LocationAlbum/LocationAlbum/Base.lproj/Main.storyboard
@@ -112,7 +112,7 @@
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="W5J-7L-Pyd" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="749.60000000000002" y="-320.68965517241384"/>
+            <point key="canvasLocation" x="601" y="-365"/>
         </scene>
         <!--Post Location-->
         <scene sceneID="KLN-Qj-29w">
@@ -333,7 +333,7 @@
                 </tableViewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="9sY-38-xrk" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="2380" y="-322.48875562218893"/>
+            <point key="canvasLocation" x="3223" y="-322"/>
         </scene>
         <!--CategoryVC-->
         <scene sceneID="jOQ-uh-VaY">
@@ -374,7 +374,7 @@
                 <placeholder placeholderIdentifier="IBFirstResponder" id="wL3-6E-eRh" userLabel="First Responder" sceneMemberID="firstResponder"/>
                 <exit id="67I-0Z-DU8" userLabel="Exit" sceneMemberID="exit"/>
             </objects>
-            <point key="canvasLocation" x="3134" y="-321"/>
+            <point key="canvasLocation" x="4095" y="-322"/>
         </scene>
         <!--Tab Bar Controller-->
         <scene sceneID="yl2-sM-qoP">
@@ -392,7 +392,7 @@
                 </tabBarController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="HuB-VB-40B" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="0.0" y="0.0"/>
+            <point key="canvasLocation" x="-447" y="-6"/>
         </scene>
         <!--Navigation Controller-->
         <scene sceneID="IvH-zK-M9f">
@@ -410,7 +410,7 @@
                 </navigationController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="0zb-Yq-u81" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="1518" y="-322"/>
+            <point key="canvasLocation" x="2390" y="-321"/>
         </scene>
         <!--Locations-->
         <scene sceneID="6Fq-pg-nrL">
@@ -428,14 +428,14 @@
                                     <rect key="frame" x="0.0" y="0.0" width="375" height="56.5"/>
                                     <autoresizingMask key="autoresizingMask"/>
                                     <subviews>
-                                        <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" text="Description" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="UJ8-HR-zl3">
+                                        <label opaque="NO" userInteractionEnabled="NO" tag="100" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" text="Description" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="UJ8-HR-zl3">
                                             <rect key="frame" x="14" y="5" width="250" height="18"/>
                                             <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                                             <fontDescription key="fontDescription" type="boldSystem" pointSize="17"/>
                                             <nil key="textColor"/>
                                             <nil key="highlightedColor"/>
                                         </label>
-                                        <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" text="Address" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Zjv-3b-QBA">
+                                        <label opaque="NO" userInteractionEnabled="NO" tag="101" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" text="Address" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Zjv-3b-QBA">
                                             <rect key="frame" x="16" y="27" width="250" height="18"/>
                                             <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                                             <fontDescription key="fontDescription" type="system" pointSize="14"/>
@@ -444,6 +444,11 @@
                                         </label>
                                     </subviews>
                                 </tableViewCellContentView>
+                                <connections>
+                                    <outlet property="addressLabel" destination="Zjv-3b-QBA" id="8wT-gk-a4L"/>
+                                    <outlet property="descriptionLabel" destination="UJ8-HR-zl3" id="rNs-UW-00N"/>
+                                    <segue destination="CUp-XF-ftU" kind="presentation" identifier="EditLocation" trigger="accessoryAction" id="Nze-FL-eGj"/>
+                                </connections>
                             </tableViewCell>
                         </prototypes>
                         <connections>
@@ -455,7 +460,7 @@
                 </tableViewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="ODZ-fS-Uwf" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="1700" y="365.66716641679164"/>
+            <point key="canvasLocation" x="1386" y="338"/>
         </scene>
         <!--Locations-->
         <scene sceneID="fhf-nb-VZY">
@@ -472,10 +477,13 @@
                 </navigationController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="64r-3F-yW1" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="748" y="366"/>
+            <point key="canvasLocation" x="602" y="338"/>
         </scene>
     </scenes>
     <resources>
         <image name="first" width="30" height="30"/>
     </resources>
+    <inferredMetricsTieBreakers>
+        <segue reference="Nze-FL-eGj"/>
+    </inferredMetricsTieBreakers>
 </document>
