--- a/LocationAlbum/LocationAlbum/Base.lproj/Main.storyboard
+++ b/LocationAlbum/LocationAlbum/Base.lproj/Main.storyboard
@@ -15,6 +15,45 @@
         </array>
     </customFonts>
     <scenes>
+        <!--Map-->
+        <scene sceneID="wRa-mY-1L3">
+            <objects>
+                <viewController id="uVH-r4-tsb" sceneMemberID="viewController">
+                    <view key="view" contentMode="scaleToFill" id="Dck-jf-uZs">
+                        <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
+                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <subviews>
+                            <mapView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" mapType="standard" showsUserLocation="YES" translatesAutoresizingMaskIntoConstraints="NO" id="UzT-JV-Jo8">
+                                <rect key="frame" x="0.0" y="20" width="375" height="598"/>
+                            </mapView>
+                            <navigationBar contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="P6B-kp-L16">
+                                <rect key="frame" x="0.0" y="20" width="375" height="44"/>
+                                <items>
+                                    <navigationItem title="Map" id="MO6-dY-0CT">
+                                        <barButtonItem key="leftBarButtonItem" title="Locations" id="ft5-sP-lZg"/>
+                                        <barButtonItem key="rightBarButtonItem" title="User" id="alz-VR-kP5"/>
+                                    </navigationItem>
+                                </items>
+                            </navigationBar>
+                        </subviews>
+                        <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                        <constraints>
+                            <constraint firstItem="P6B-kp-L16" firstAttribute="top" secondItem="DGW-eb-bVs" secondAttribute="top" id="E8t-Q3-X3I"/>
+                            <constraint firstItem="UzT-JV-Jo8" firstAttribute="bottom" secondItem="DGW-eb-bVs" secondAttribute="bottom" id="Jiv-Ba-iEA"/>
+                            <constraint firstItem="UzT-JV-Jo8" firstAttribute="trailing" secondItem="DGW-eb-bVs" secondAttribute="trailing" id="Td2-TX-Nkd"/>
+                            <constraint firstItem="UzT-JV-Jo8" firstAttribute="top" secondItem="DGW-eb-bVs" secondAttribute="top" id="Vlc-I2-lEQ"/>
+                            <constraint firstItem="P6B-kp-L16" firstAttribute="trailing" secondItem="DGW-eb-bVs" secondAttribute="trailing" id="gST-aN-v0W"/>
+                            <constraint firstItem="P6B-kp-L16" firstAttribute="leading" secondItem="DGW-eb-bVs" secondAttribute="leading" id="wfC-yl-7U6"/>
+                            <constraint firstItem="UzT-JV-Jo8" firstAttribute="leading" secondItem="DGW-eb-bVs" secondAttribute="leading" id="yrq-4n-jWd"/>
+                        </constraints>
+                        <viewLayoutGuide key="safeArea" id="DGW-eb-bVs"/>
+                    </view>
+                    <tabBarItem key="tabBarItem" title="Map" image="first" id="Lg1-sE-4nc"/>
+                </viewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="yqm-qe-PgX" userLabel="First Responder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="586.39999999999998" y="-1043.9280359820091"/>
+        </scene>
         <!--Post-->
         <scene sceneID="hNz-n2-bh7">
             <objects>
@@ -388,6 +427,7 @@
                     <connections>
                         <segue destination="9pv-A4-QxB" kind="relationship" relationship="viewControllers" id="u7Y-xg-7CH"/>
                         <segue destination="UUQ-97-pZd" kind="relationship" relationship="viewControllers" id="Y77-vB-loW"/>
+                        <segue destination="uVH-r4-tsb" kind="relationship" relationship="viewControllers" id="QEK-lf-jtj"/>
                     </connections>
                 </tabBarController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="HuB-VB-40B" sceneMemberID="firstResponder"/>
@@ -466,7 +506,7 @@
         <scene sceneID="fhf-nb-VZY">
             <objects>
                 <navigationController id="UUQ-97-pZd" sceneMemberID="viewController">
-                    <tabBarItem key="tabBarItem" title="Locations" id="svN-iK-aeU"/>
+                    <tabBarItem key="tabBarItem" title="Locations" image="second" id="svN-iK-aeU"/>
                     <navigationBar key="navigationBar" contentMode="scaleToFill" insetsLayoutMarginsFromSafeArea="NO" id="2Qz-no-kBq">
                         <rect key="frame" x="0.0" y="20" width="375" height="44"/>
                         <autoresizingMask key="autoresizingMask"/>
@@ -482,8 +522,9 @@
     </scenes>
     <resources>
         <image name="first" width="30" height="30"/>
+        <image name="second" width="30" height="30"/>
     </resources>
     <inferredMetricsTieBreakers>
-        <segue reference="maR-70-Ggh"/>
+        <segue reference="Ddc-ah-YNh"/>
     </inferredMetricsTieBreakers>
 </document>
