--- a/LocationAlbum/LocationAlbum/Base.lproj/Main.storyboard
+++ b/LocationAlbum/LocationAlbum/Base.lproj/Main.storyboard
@@ -18,7 +18,7 @@
         <!--Map-->
         <scene sceneID="wRa-mY-1L3">
             <objects>
-                <viewController id="uVH-r4-tsb" sceneMemberID="viewController">
+                <viewController id="uVH-r4-tsb" customClass="MapVC" customModule="LocationAlbum" customModuleProvider="target" sceneMemberID="viewController">
                     <view key="view" contentMode="scaleToFill" id="Dck-jf-uZs">
                         <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
@@ -30,8 +30,16 @@
                                 <rect key="frame" x="0.0" y="20" width="375" height="44"/>
                                 <items>
                                     <navigationItem title="Map" id="MO6-dY-0CT">
-                                        <barButtonItem key="leftBarButtonItem" title="Locations" id="ft5-sP-lZg"/>
-                                        <barButtonItem key="rightBarButtonItem" title="User" id="alz-VR-kP5"/>
+                                        <barButtonItem key="leftBarButtonItem" title="Locations" id="ft5-sP-lZg">
+                                            <connections>
+                                                <action selector="showLocations" destination="uVH-r4-tsb" id="mIk-3R-PPZ"/>
+                                            </connections>
+                                        </barButtonItem>
+                                        <barButtonItem key="rightBarButtonItem" title="User" id="alz-VR-kP5">
+                                            <connections>
+                                                <action selector="showUser" destination="uVH-r4-tsb" id="n6h-c9-mLR"/>
+                                            </connections>
+                                        </barButtonItem>
                                     </navigationItem>
                                 </items>
                             </navigationBar>
@@ -49,6 +57,9 @@
                         <viewLayoutGuide key="safeArea" id="DGW-eb-bVs"/>
                     </view>
                     <tabBarItem key="tabBarItem" title="Map" image="first" id="Lg1-sE-4nc"/>
+                    <connections>
+                        <outlet property="mapView" destination="UzT-JV-Jo8" id="7rI-nL-KKr"/>
+                    </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="yqm-qe-PgX" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
